--- a/Demos/ZavaRetailAgent/demo.ipynb
+++ b/Demos/ZavaRetailAgent/demo.ipynb
@@ -13,7 +13,7 @@
         "\n",
         "---\n",
         "\n",
-        "This notebook accompanies the conference demo and serves as a structured cookbook for reproducing the full workflow."
+        "This notebook accompanies the Ignite Conference demo and serves as a structured cookbook for reproducing the full workflow."
       ]
     },
     {
@@ -23,7 +23,7 @@
       "source": [
         "### Demo Goal: Improving the Zava Retail Agent\n",
         "\n",
-        "To make this notebook concrete, we use a fictional retail brand called **Zava**, which provides a customer-service AI agent powered by **Microsoft Foundry** and a **Retail MCP Server** exposing 17 tools (product search, user lookup, order details, returns, exchanges, profile updates, and more).\n",
+        "To make this notebook concrete, we use a fictional retail brand called **Zava**, which provides a customer-service AI agent powered by **Microsoft Foundry** and a **Retail MCP Server** exposing various tools (product search, user lookup, order details, returns, exchanges, profile updates, and more).\n",
         "\n",
         "The goal of this demo is to show how to improve the Zava agent’s **tool-calling accuracy and multi-turn reliability** using modern fine-tuning techniques.\n",
         "\n",
@@ -47,9 +47,9 @@
         "\n",
         "More complex customer scenarios — such as updating an address, processing returns, or combining multiple tool steps — require the model to:\n",
         "\n",
-        "- chain tool outputs correctly  \n",
-        "- pass parameters from one tool call to the next  \n",
-        "- remain consistent across many turns  \n",
+        "- Chain tools correctly  \n",
+        "- Pass parameters from one tool call to the next correctly\n",
+        "- Remain consistent across many turns  \n",
         "\n",
         "This is where the base model struggles, motivating the need for fine-tuning.\n",
         "\n",
@@ -60,10 +60,10 @@
         "The remainder of this notebook demonstrates how to improve the Zava agent through:\n",
         "\n",
         "1. **Synthetic Data Generation**  \n",
-        "   Creating high-quality multi-turn retail conversations using the new generation capabilities in Microsoft Foundry.\n",
+        "   Creating high-quality multi-turn retail conversations using the new data generation capabilities in Microsoft Foundry.\n",
         "\n",
         "2. **Supervised Fine-Tuning (SFT)**  \n",
-        "   Teaching the model correct tool invocation patterns and policy-aligned reasoning.\n",
+        "   Teaching the model correct tool invocation patterns and policy-aligned reasoning with supervised fine-tuning.\n",
         "\n",
         "3. **Evaluation with Python Graders**  \n",
         "   Measuring tool-calling accuracy and verifying parameter correctness.\n",
@@ -75,16 +75,14 @@
         "\n",
         "#### Notebook Roadmap\n",
         "\n",
-        "This notebook is structured to follow the same path as the demo:\n",
-        "\n",
         "1. Architecture overview (Agent + MCP Server)  \n",
         "2. Environment setup  \n",
-        "3. Baseline behavior  \n",
+        "3. Base model behavior  \n",
         "4. Evaluation methodology  \n",
-        "5. Synthetic data  \n",
-        "6. SFT  \n",
-        "7. RFT  \n",
-        "8. Results and comparisons  \n",
+        "5. Synthetic data generation \n",
+        "6. Supervised fine-tuning\n",
+        "7. Reinforcement fine-tuning\n",
+        "8. Results and comparisons\n",
         "\n",
         "Together, these steps show how to transform the Zava agent into a **reliable, policy-aligned, multi-turn tool-calling system**.\n"
       ]
@@ -114,12 +112,12 @@
         "The agent is configured with:\n",
         "\n",
         "- **A system prompt** describing Zava’s retail rules and policies  \n",
-        "- **Structured tool definitions** (17 MCP tools)  \n",
+        "- **Structured tool definitions** (9 MCP tools)  \n",
         "- **A deployed model** such as:\n",
         "  - `gpt-4.1`\n",
         "  - `gpt-4.1-mini`\n",
         "  - `gpt-4.1-nano`\n",
-        "  - Later in this notebook: fine-tuned variants  \n",
+        "  - Later in this notebook: fine-tuned models  \n",
         "\n",
         "The agent is the “brain” of the system—driving all reasoning and tool decisions.\n",
         "\n",
@@ -127,11 +125,7 @@
         "\n",
         "### 1.2 Retail MCP Server (Tool Provider)\n",
         "\n",
-        "The agent relies on a dedicated **Model Context Protocol (MCP) server**, hosted at:\n",
-        "\n",
-        "```\n",
-        "https://retail-mcp-server-sim.braveflower-06b407cc.eastus.azurecontainerapps.io/\n",
-        "```\n",
+        "The agent relies on a dedicated **Model Context Protocol (MCP) server**. Details about setting up your own sample MCP server for use in this notebook can be find <TBD>.\n",
         "\n",
         "The MCP server exposes **9 tools** representing Zava’s operational backend:\n",
         "\n",
@@ -157,7 +151,7 @@
         "Each tool includes:\n",
         "\n",
         "- A schema for inputs (e.g., `user_id`, `order_id`, `zip`)  \n",
-        "- A schema for outputs (user profile, order details, product metadata)  \n",
+        "- A schema for outputs (e.g., `user_profile`, `order_details`, `product_metadata`)  \n",
         "- Built-in policy constraints (e.g., return windows per product category)  \n",
         "\n",
         "These tools form the **action space** available to the LLM.\n",
@@ -175,7 +169,7 @@
         "- Introducing the agent architecture  \n",
         "- Zero configuration required  \n",
         "\n",
-        "#### **Local `retail_agent` CLI (included with this cookbook)**  \n",
+        "#### **Local `retail_agent` CLI (included with this cookbook)** <TBD>\n",
         "Best for:\n",
         "- Rapid multi-turn iteration  \n",
         "- Testing fine-tuned models side-by-side  \n",
@@ -215,7 +209,7 @@
         "\n",
         "---\n",
         "\n",
-        "### 1.5 Architecture Diagram (Visual)\n",
+        "### 1.5 Architecture Diagram\n",
         "\n",
         "<img src=\"img/architecture.png\" alt=\"Zava Architecture Diagram\" width=\"600\">\n",
         "\n",
@@ -225,7 +219,7 @@
         "\n",
         "Fine-tuning an agent can help improve:\n",
         "\n",
-        "- **Tool ordering**  \n",
+        "- **Tool chaining**  \n",
         "  Ensuring the model triggers tools in the correct sequence  \n",
         "  (e.g., find → fetch → update)\n",
         "\n",
@@ -287,21 +281,11 @@
         "\n",
         "Install all required packages from the provided `requirements.txt`:\n",
         "\n",
-        "```text\n",
-        "azure-ai-projects==1.0.0\n",
-        "azure-ai-agents==1.2.0b6\n",
-        "azure-identity\n",
-        "python-dotenv\n",
-        "colorama\n",
-        "```\n",
-        "\n",
-        "Run:\n",
-        "\n",
         "```bash\n",
         "pip install -r requirements.txt\n",
         "```\n",
         "\n",
-        "> If using VS Code notebooks, ensure you select the `retail-finetune` interpreter.\n",
+        "> If using VS Code notebooks, ensure you select the `retail-finetune` kernel on top right.\n",
         "\n",
         "---\n",
         "\n",
@@ -316,22 +300,6 @@
         "\n",
         "Open `.env` and fill in the required values:\n",
         "\n",
-        "```text\n",
-        "AZURE_AI_PROJECT_NAME=...\n",
-        "AZURE_AI_ENDPOINT=...\n",
-        "AZURE_OPENAI_API_KEY=...\n",
-        "AZURE_OPENAI_ENDPOINT=...\n",
-        "MCP_SERVER_URL=https://retail-mcp-server-sim.braveflower-06b407cc.eastus.azurecontainerapps.io/mcp\n",
-        "```\n",
-        "\n",
-        "These values allow the notebook to:\n",
-        "\n",
-        "- Authenticate to Azure  \n",
-        "- Connect to your AI Foundry Project  \n",
-        "- Submit finetuning jobs  \n",
-        "- Run evaluations  \n",
-        "- Query the MCP server  \n",
-        "\n",
         "> **Important:** The notebook will not function without valid Azure credentials.\n",
         "\n",
         "---\n",
@@ -339,40 +307,10 @@
         "### 2.5 Testing MCP Server Connectivity\n",
         "\n",
         "This notebook interacts with your hosted Retail MCP server.  \n",
-        "To inspect its tools and confirm that it is reachable, use the **Model Context Protocol Inspector**.\n",
-        "\n",
-        "#### Install (Node-based)\n",
-        "\n",
-        "If you do not have Node.js installed:\n",
-        "\n",
-        "- Download from: https://nodejs.org\n",
-        "\n",
-        "Then install the MCP Inspector globally:\n",
-        "\n",
-        "```bash\n",
-        "npm install -g @modelcontextprotocol/inspector\n",
-        "```\n",
-        "\n",
-        "#### Run the inspector\n",
-        "\n",
-        "```bash\n",
-        "npx @modelcontextprotocol/inspector \\\n",
-        "  https://retail-mcp-server-sim.braveflower-06b407cc.eastus.azurecontainerapps.io/mcp\n",
-        "```\n",
-        "\n",
-        "You should see:\n",
-        "\n",
-        "- The full tool list (17 tools)  \n",
-        "- JSON schemas  \n",
-        "- Tool invocation test capability  \n",
-        "\n",
-        "This is useful for debugging tool definitions outside of the agent.\n",
-        "\n",
-        "---\n",
         "\n",
         "**Verify Python Access to the MCP Server**\n",
         "\n",
-        "A quick sanity test inside the notebook:"
+        "Below is quick sanity test to check connectivity and access from notebook."
       ]
     },
     {
@@ -435,10 +373,70 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
       "id": "90d19b40",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "🤖 Testing Microsoft Foundry Retail Agent\n",
+            "\n",
+            "======================================================================\n",
+            "🤖 Retail Agent Test Suite\n",
+            "======================================================================\n",
+            "Model: gpt-4o-mini\n",
+            "MCP Server: https://retail-mcp-server-sim.braveflower-06b407cc.eastus.azurecontainerapps.io/mcp\n",
+            "\n",
+            "Testing Azure AI Foundry connection...\n",
+            "✓ Connected to Azure AI Foundry\n",
+            "\n",
+            "Testing agent creation...\n",
+            "✓ Agent created: asst_k8wIcr1ihVLb6LosawaCIl2f\n",
+            "  Model: gpt-4o-mini\n",
+            "\n",
+            "Testing thread creation...\n",
+            "✓ Thread created: thread_DlXxsZW1S1RzrggECl6MJwa5\n",
+            "\n",
+            "Testing simple query...\n",
+            "  Query: 'What products do you have?'\n",
+            "✓ Got response\n",
+            "  Response preview: Here are the products we have available:\n",
+            "\n",
+            "1. T-Shirt\n",
+            "2. Laptop\n",
+            "3. Running Shoes\n",
+            "4. Smartphone\n",
+            "5. Bac...\n",
+            "\n",
+            "Testing user lookup...\n",
+            "  Query: 'Can you find user information for noah.brown7922@example.com?'\n",
+            "✓ User lookup successful (tool was called)\n",
+            "\n",
+            "Cleaning up resources...\n",
+            "✓ Deleted agent\n",
+            "✓ Deleted thread\n",
+            "\n",
+            "======================================================================\n",
+            "📊 Test Summary\n",
+            "======================================================================\n",
+            "\n",
+            "Test Name                      Status          Result\n",
+            "----------------------------------------------------------------------\n",
+            "Connection                     PASS            ✅\n",
+            "Agent Creation                 PASS            ✅\n",
+            "Thread Creation                PASS            ✅\n",
+            "Simple Query                   PASS            ✅\n",
+            "User Lookup                    PASS            ✅\n",
+            "----------------------------------------------------------------------\n",
+            "\n",
+            "📈 Results: 5/5 tests passed (100%)\n",
+            "\n",
+            "✅ All tests passed! Retail agent is fully operational.\n"
+          ]
+        }
+      ],
       "source": [
         "# Testing Retail Agent with Microsoft Foundry\n",
         "import sys\n",
