--- a/Demos/DPO_Intel_Orca/dpo_finetuning_intel_orca.ipynb
+++ b/Demos/DPO_Intel_Orca/dpo_finetuning_intel_orca.ipynb
@@ -402,7 +402,7 @@
         "resource_group = os.environ.get(\"AZURE_RESOURCE_GROUP\")\n",
         "account_name = os.environ.get(\"AZURE_AOAI_ACCOUNT\")\n",
         "\n",
-        "deployment_name = \"gpt-4o-mini-dpo-finetuned\"\n",
+        "deployment_name = \"gpt-4.1-mini-dpo-finetuned\"\n",
         "\n",
         "with CognitiveServicesManagementClient(credential=credential, subscription_id=subscription_id) as cogsvc_client:\n",
         "    deployment_model = DeploymentModel(format=\"OpenAI\", name=fine_tuned_model_id, version=\"1\")\n",
@@ -418,9 +418,8 @@
         "        deployment=deployment_config,\n",
         "    )\n",
         "    \n",
-        "    while deployment.status() not in [\"Succeeded\", \"Failed\"]:\n",
-        "        time.sleep(30)\n",
-        "        print(f\"Deployment status: {deployment.status()}\")\n",
+        "    print(\"Waiting for deployment to complete...\")\n",
+        "    deployment.result()\n",
         "\n",
         "print(f\" Model deployment completed: {deployment_name}\")"
       ]
