--- a/Demos/DPO_Intel_Orca/dpo_finetuning_intel_orca.ipynb
+++ b/Demos/DPO_Intel_Orca/dpo_finetuning_intel_orca.ipynb
@@ -235,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -266,7 +266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -418,7 +418,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -454,7 +454,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -484,7 +484,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -492,10 +492,10 @@
           "output_type": "stream",
           "text": [
             "Uploading training file...\n",
-            " Training file ID: file-67dabb13635e4335a16fc9b860af30c3\n",
+            " Training file ID: file-4121fac45b5144bab840f2a8bea3eb9c\n",
             "\n",
             "Uploading validation file...\n",
-            " Validation file ID: file-921477d36d614ec4aceb35605dedf464\n"
+            " Validation file ID: file-b3b53f48582b4bf89741bfbd1f6fd7a1\n"
           ]
         }
       ],
@@ -513,7 +513,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -1054,7 +1054,16 @@
       "cell_type": "code",
       "execution_count": 11,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            " Job ID: ftjob-4cad7de198a34baeb4f0c95ff01ac844\n",
+            "Status: pending\n"
+          ]
+        }
+      ],
       "source": [
         "fine_tuning_job = openai_client.fine_tuning.jobs.create(\n",
         "    training_file=train_file.id,\n",
@@ -1089,7 +1098,15 @@
       "cell_type": "code",
       "execution_count": 12,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Status: pending\n"
+          ]
+        }
+      ],
       "source": [
         "job_status = openai_client.fine_tuning.jobs.retrieve(fine_tuning_job.id)\n",
         "print(f\"Status: {job_status.status}\")"
@@ -1099,7 +1116,15 @@
       "cell_type": "code",
       "execution_count": 13,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Job enqueued. Waiting for jobs ahead to complete.\n"
+          ]
+        }
+      ],
       "source": [
         "# View recent events\n",
         "events = list(openai_client.fine_tuning.jobs.list_events(fine_tuning_job.id, limit=10))\n",
@@ -1117,7 +1142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
