adding continual finetuning

--- a/Demos/DPO_Intel_Orca/dpo_finetuning_intel_orca.ipynb
+++ b/Demos/DPO_Intel_Orca/dpo_finetuning_intel_orca.ipynb
@@ -418,7 +418,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -454,7 +454,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -2239,7 +2239,68 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 14. Next Steps\n",
+        "## 14. Continual Fine-Tuning (Optional)\n",
+        "\n",
+        "If your fine-tuned model didn't show improvements, you can perform **continual fine-tuning** by using the fine-tuned model as the base for another round of training. This iterative approach can help refine the model further.\n",
+        "\n",
+        "### When to Use Continual Fine-Tuning:\n",
+        "- Your first fine-tuning run didn't improve metrics\n",
+        "- You want to adjust hyperparameters and train further\n",
+        "- You have additional training data to incorporate\n",
+        "- You need to fine-tune for a more specific task\n",
+        "\n",
+        "### How It Works:\n",
+        "Instead of using model_name (base model), use fine_tuned_model_id from section 10 as your new base model. The code below is the same as section 8, but modified to continue training from your fine-tuned model."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Continual fine-tuning using base model: gpt-4.1-mini-2025-04-14.ft-4cad7de198a34baeb4f0c95ff01ac844\n",
+            "Continual fine-tuning job created!\n",
+            "Job ID: ftjob-ca7805d53a5e496ca87aebca9894e134\n",
+            "Status: pending\n"
+          ]
+        }
+      ],
+      "source": [
+        "\n",
+        "continual_base_model = fine_tuned_model_id\n",
+        "print(f\"Continual fine-tuning using base model: {continual_base_model}\")\n",
+        "\n",
+        "continual_job = openai_client.fine_tuning.jobs.create(\n",
+        "    training_file=train_file.id,  # You can use the same or upload new training data\n",
+        "    validation_file=validation_file.id,\n",
+        "    model=continual_base_model,  # Using fine-tuned model instead of base model\n",
+        "    method={\n",
+        "        \"type\": \"dpo\",\n",
+        "        \"dpo\": {\n",
+        "            \"hyperparameters\": {\n",
+        "                \"n_epochs\": 2,  # Reduced from 3 to prevent overfitting\n",
+        "                \"batch_size\": 1,\n",
+        "                \"learning_rate_multiplier\": 0.5  # Lower learning rate for fine-tuning refinement\n",
+        "            }\n",
+        "        }\n",
+        "    },\n",
+        "    extra_body={\"trainingType\": \"GlobalStandard\"}\n",
+        ")\n",
+        "\n",
+        "print(f\"Continual fine-tuning job created!\")\n",
+        "print(f\"Job ID: {continual_job.id}\")\n",
+        "print(f\"Status: {continual_job.status}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 15. Next Steps\n",
         "\n",
         "Congratulations! You've successfully fine-tuned a model with DPO.\n",
         "\n",
