--- a/Demos/SFT_CNN_DailyMail/sft_cnn_dailymail.ipynb
+++ b/Demos/SFT_CNN_DailyMail/sft_cnn_dailymail.ipynb
@@ -37,9 +37,12 @@
      "output_type": "stream",
      "text": [
       "Collecting azure-ai-projects>=2.0.0b1 (from -r requirements.txt (line 2))\n",
-      "  Using cached azure_ai_projects-2.0.0b2-py3-none-any.whl.metadata (63 kB)\n",
+      "  Downloading azure_ai_projects-2.0.0b3-py3-none-any.whl.metadata (68 kB)\n",
+      "     ---------------------------------------- 0.0/68.9 kB ? eta -:--:--\n",
+      "     ----------------- ---------------------- 30.7/68.9 kB 1.4 MB/s eta 0:00:01\n",
+      "     -------------------------------------- 68.9/68.9 kB 751.8 kB/s eta 0:00:00\n",
       "Collecting openai (from -r requirements.txt (line 5))\n",
-      "  Downloading openai-2.14.0-py3-none-any.whl.metadata (29 kB)\n",
+      "  Using cached openai-2.14.0-py3-none-any.whl.metadata (29 kB)\n",
       "Collecting azure-identity (from -r requirements.txt (line 8))\n",
       "  Using cached azure_identity-1.25.1-py3-none-any.whl.metadata (88 kB)\n",
       "Collecting azure-mgmt-cognitiveservices (from -r requirements.txt (line 9))\n",
@@ -50,7 +53,6 @@
       "  Using cached isodate-0.7.2-py3-none-any.whl.metadata (11 kB)\n",
       "Collecting azure-core>=1.35.0 (from azure-ai-projects>=2.0.0b1->-r requirements.txt (line 2))\n",
       "  Using cached azure_core-1.37.0-py3-none-any.whl.metadata (47 kB)\n",
-      "Requirement already satisfied: typing-extensions>=4.6.0 in c:\\work\\amlrepos\\fine-tuning\\envsft\\lib\\site-packages (from azure-ai-projects>=2.0.0b1->-r requirements.txt (line 2)) (4.15.0)\n",
       "Collecting azure-storage-blob>=12.15.0 (from azure-ai-projects>=2.0.0b1->-r requirements.txt (line 2))\n",
       "  Using cached azure_storage_blob-12.27.1-py3-none-any.whl.metadata (26 kB)\n",
       "Collecting anyio<5,>=3.5.0 (from openai->-r requirements.txt (line 5))\n",
@@ -67,6 +69,7 @@
       "  Using cached sniffio-1.3.1-py3-none-any.whl.metadata (3.9 kB)\n",
       "Collecting tqdm>4 (from openai->-r requirements.txt (line 5))\n",
       "  Using cached tqdm-4.67.1-py3-none-any.whl.metadata (57 kB)\n",
+      "Requirement already satisfied: typing-extensions<5,>=4.11 in c:\\work\\amlrepos\\fine-tuning\\envsftcnn\\lib\\site-packages (from openai->-r requirements.txt (line 5)) (4.15.0)\n",
       "Collecting cryptography>=2.5 (from azure-identity->-r requirements.txt (line 8))\n",
       "  Using cached cryptography-46.0.3-cp311-abi3-win_amd64.whl.metadata (5.7 kB)\n",
       "Collecting msal>=1.30.0 (from azure-identity->-r requirements.txt (line 8))\n",
@@ -84,7 +87,7 @@
       "Collecting cffi>=2.0.0 (from cryptography>=2.5->azure-identity->-r requirements.txt (line 8))\n",
       "  Using cached cffi-2.0.0-cp311-cp311-win_amd64.whl.metadata (2.6 kB)\n",
       "Collecting certifi (from httpx<1,>=0.23.0->openai->-r requirements.txt (line 5))\n",
-      "  Using cached certifi-2025.11.12-py3-none-any.whl.metadata (2.5 kB)\n",
+      "  Downloading certifi-2026.1.4-py3-none-any.whl.metadata (2.5 kB)\n",
       "Collecting httpcore==1.* (from httpx<1,>=0.23.0->openai->-r requirements.txt (line 5))\n",
       "  Using cached httpcore-1.0.9-py3-none-any.whl.metadata (21 kB)\n",
       "Collecting h11>=0.16 (from httpcore==1.*->httpx<1,>=0.23.0->openai->-r requirements.txt (line 5))\n",
@@ -99,7 +102,7 @@
       "  Using cached pydantic_core-2.41.5-cp311-cp311-win_amd64.whl.metadata (7.4 kB)\n",
       "Collecting typing-inspection>=0.4.2 (from pydantic<3,>=1.9.0->openai->-r requirements.txt (line 5))\n",
       "  Using cached typing_inspection-0.4.2-py3-none-any.whl.metadata (2.6 kB)\n",
-      "Requirement already satisfied: colorama in c:\\work\\amlrepos\\fine-tuning\\envsft\\lib\\site-packages (from tqdm>4->openai->-r requirements.txt (line 5)) (0.4.6)\n",
+      "Requirement already satisfied: colorama in c:\\work\\amlrepos\\fine-tuning\\envsftcnn\\lib\\site-packages (from tqdm>4->openai->-r requirements.txt (line 5)) (0.4.6)\n",
       "Collecting pycparser (from cffi>=2.0.0->cryptography>=2.5->azure-identity->-r requirements.txt (line 8))\n",
       "  Using cached pycparser-2.23-py3-none-any.whl.metadata (993 bytes)\n",
       "Collecting charset_normalizer<4,>=2 (from requests>=2.21.0->azure-core>=1.35.0->azure-ai-projects>=2.0.0b1->-r requirements.txt (line 2))\n",
@@ -108,14 +111,11 @@
       "  Using cached urllib3-2.6.2-py3-none-any.whl.metadata (6.6 kB)\n",
       "Collecting oauthlib>=3.0.0 (from requests-oauthlib>=0.5.0->msrest>=0.7.1->azure-mgmt-cognitiveservices->-r requirements.txt (line 9))\n",
       "  Using cached oauthlib-3.3.1-py3-none-any.whl.metadata (7.9 kB)\n",
-      "Using cached azure_ai_projects-2.0.0b2-py3-none-any.whl (234 kB)\n",
-      "Downloading openai-2.14.0-py3-none-any.whl (1.1 MB)\n",
-      "   ---------------------------------------- 0.0/1.1 MB ? eta -:--:--\n",
-      "   - -------------------------------------- 0.0/1.1 MB 1.9 MB/s eta 0:00:01\n",
-      "   ------ --------------------------------- 0.2/1.1 MB 2.6 MB/s eta 0:00:01\n",
-      "   -------------- ------------------------- 0.4/1.1 MB 3.6 MB/s eta 0:00:01\n",
-      "   -------------------------------- ------- 0.9/1.1 MB 5.1 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 1.1/1.1 MB 5.2 MB/s eta 0:00:00\n",
+      "Downloading azure_ai_projects-2.0.0b3-py3-none-any.whl (240 kB)\n",
+      "   ---------------------------------------- 0.0/240.7 kB ? eta -:--:--\n",
+      "   --------------- ------------------------ 92.2/240.7 kB 5.1 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 240.7/240.7 kB 3.0 MB/s eta 0:00:00\n",
+      "Using cached openai-2.14.0-py3-none-any.whl (1.1 MB)\n",
       "Using cached azure_identity-1.25.1-py3-none-any.whl (191 kB)\n",
       "Using cached azure_mgmt_cognitiveservices-14.1.0-py3-none-any.whl (290 kB)\n",
       "Using cached python_dotenv-1.2.1-py3-none-any.whl (21 kB)\n",
@@ -137,7 +137,9 @@
       "Using cached tqdm-4.67.1-py3-none-any.whl (78 kB)\n",
       "Using cached sniffio-1.3.1-py3-none-any.whl (10 kB)\n",
       "Using cached annotated_types-0.7.0-py3-none-any.whl (13 kB)\n",
-      "Using cached certifi-2025.11.12-py3-none-any.whl (159 kB)\n",
+      "Downloading certifi-2026.1.4-py3-none-any.whl (152 kB)\n",
+      "   ---------------------------------------- 0.0/152.9 kB ? eta -:--:--\n",
+      "   ---------------------------------------- 152.9/152.9 kB 8.9 MB/s eta 0:00:00\n",
       "Using cached cffi-2.0.0-cp311-cp311-win_amd64.whl (182 kB)\n",
       "Using cached idna-3.11-py3-none-any.whl (71 kB)\n",
       "Using cached PyJWT-2.10.1-py3-none-any.whl (22 kB)\n",
@@ -149,8 +151,8 @@
       "Using cached oauthlib-3.3.1-py3-none-any.whl (160 kB)\n",
       "Using cached urllib3-2.6.2-py3-none-any.whl (131 kB)\n",
       "Using cached pycparser-2.23-py3-none-any.whl (118 kB)\n",
-      "Installing collected packages: urllib3, typing-inspection, tqdm, sniffio, python-dotenv, PyJWT, pydantic-core, pycparser, oauthlib, jiter, isodate, idna, h11, distro, charset_normalizer, certifi, annotated-types, requests, pydantic, httpcore, cffi, anyio, requests-oauthlib, httpx, cryptography, azure-core, openai, msrest, azure-storage-blob, azure-mgmt-core, msal, azure-mgmt-cognitiveservices, azure-ai-projects, msal-extensions, azure-identity\n",
-      "Successfully installed PyJWT-2.10.1 annotated-types-0.7.0 anyio-4.12.0 azure-ai-projects-2.0.0b2 azure-core-1.37.0 azure-identity-1.25.1 azure-mgmt-cognitiveservices-14.1.0 azure-mgmt-core-1.6.0 azure-storage-blob-12.27.1 certifi-2025.11.12 cffi-2.0.0 charset_normalizer-3.4.4 cryptography-46.0.3 distro-1.9.0 h11-0.16.0 httpcore-1.0.9 httpx-0.28.1 idna-3.11 isodate-0.7.2 jiter-0.12.0 msal-1.34.0 msal-extensions-1.3.1 msrest-0.7.1 oauthlib-3.3.1 openai-2.14.0 pycparser-2.23 pydantic-2.12.5 pydantic-core-2.41.5 python-dotenv-1.2.1 requests-2.32.5 requests-oauthlib-2.0.0 sniffio-1.3.1 tqdm-4.67.1 typing-inspection-0.4.2 urllib3-2.6.2\n",
+      "Installing collected packages: urllib3, typing-inspection, tqdm, sniffio, python-dotenv, PyJWT, pydantic-core, pycparser, oauthlib, jiter, isodate, idna, h11, distro, charset_normalizer, certifi, annotated-types, requests, pydantic, httpcore, cffi, anyio, requests-oauthlib, httpx, cryptography, azure-core, openai, msrest, azure-storage-blob, azure-mgmt-core, msal, azure-mgmt-cognitiveservices, msal-extensions, azure-identity, azure-ai-projects\n",
+      "Successfully installed PyJWT-2.10.1 annotated-types-0.7.0 anyio-4.12.0 azure-ai-projects-2.0.0b3 azure-core-1.37.0 azure-identity-1.25.1 azure-mgmt-cognitiveservices-14.1.0 azure-mgmt-core-1.6.0 azure-storage-blob-12.27.1 certifi-2026.1.4 cffi-2.0.0 charset_normalizer-3.4.4 cryptography-46.0.3 distro-1.9.0 h11-0.16.0 httpcore-1.0.9 httpx-0.28.1 idna-3.11 isodate-0.7.2 jiter-0.12.0 msal-1.34.0 msal-extensions-1.3.1 msrest-0.7.1 oauthlib-3.3.1 openai-2.14.0 pycparser-2.23 pydantic-2.12.5 pydantic-core-2.41.5 python-dotenv-1.2.1 requests-2.32.5 requests-oauthlib-2.0.0 sniffio-1.3.1 tqdm-4.67.1 typing-inspection-0.4.2 urllib3-2.6.2\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
@@ -177,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -270,12 +272,13 @@
    "source": [
     "## 5. Upload Training Files\n",
     "\n",
-    "Upload the training and validation JSONL files to Azure AI. Each file is assigned a unique ID that will be referenced when creating the fine-tuning job."
+    "Upload the training and validation JSONL files to Azure AI. Each file is assigned a unique ID that will be referenced when creating the fine-tuning job.\n",
+    "If training or validation files are already uploaded to storage account, then you can import those files directly instead of reuploading these files again."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -283,10 +286,9 @@
      "output_type": "stream",
      "text": [
       "Uploading training file...\n",
-      "Training file ID: file-f54ff771bb7c4abf903fc5332f329386\n",
-      "\n",
       "Uploading validation file...\n",
-      "Validation file ID: file-99c5704c23b24216b0e117055ec3b092\n"
+      "Training file ID: file-a293481644964364b5e459927cd31a0c\n",
+      "Validation file ID: file-1138717d4fb1468fb5d05c0da2903f5b\n"
      ]
     }
    ],
@@ -294,26 +296,119 @@
     "print(\"Uploading training file...\")\n",
     "with open(training_file_path, \"rb\") as f:\n",
     "    train_file = openai_client.files.create(file=f, purpose=\"fine-tune\")\n",
-    "print(f\"Training file ID: {train_file.id}\")\n",
     "\n",
-    "print(\"\\nUploading validation file...\")\n",
+    "print(\"Uploading validation file...\")\n",
     "with open(validation_file_path, \"rb\") as f:\n",
     "    validation_file = openai_client.files.create(file=f, purpose=\"fine-tune\")\n",
-    "print(f\"Validation file ID: {validation_file.id}\")"
+    "\n",
+    "train_file_id = train_file.id\n",
+    "val_file_id = validation_file.id\n",
+    "\n",
+    "print(f\"Training file ID: {train_file_id}\")\n",
+    "print(f\"Validation file ID: {val_file_id}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Wait for File Processing\n",
+    "## 6. Import Training Files from Azure Blob Storage (Optional)\n",
+    "\n",
+    "If your training data is already stored in Azure Blob Storage, you can import it directly without re-uploading.\n",
+    "\n",
+    "**Prerequisites:**\n",
+    "1. Upload `training.jsonl` and `validation.jsonl` to Azure Blob Storage\n",
+    "2. Generate SAS tokens with read permissions.\n",
+    "3. Set environment variables:\n",
+    "   ```bash\n",
+    "   TRAINING_FILE_BLOB_URL=https://<storage-account>.blob.core.windows.net/<container>/training.jsonl?<sas-token>\n",
+    "   VALIDATION_FILE_BLOB_URL=https://<storage-account>.blob.core.windows.net/<container>/validation.jsonl?<sas-token>\n",
+    "   ```\n",
+    "\n",
+    "**Note:** This uses the Azure-specific `/openai/files/import` endpoint (preview API). Skip this section if you've already uploaded files in Section 5."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Importing files from Azure Blob Storage...\n",
+      "Importing training file...\n",
+      "Training file imported: file-9e05ab8899db40cfaf06cbbf03d8f74d\n",
+      "Importing validation file...\n",
+      "Validation file imported: file-120e7bb085c04454a24598380e3a8688\n",
+      "Import completed! Files are being processed...\n"
+     ]
+    }
+   ],
+   "source": [
+    "import httpx\n",
+    "\n",
+    "training_blob_url = os.environ.get(\"TRAINING_FILE_BLOB_URL\")\n",
+    "validation_blob_url = os.environ.get(\"VALIDATION_FILE_BLOB_URL\")\n",
+    "\n",
+    "if training_blob_url:\n",
+    "    print(\"Importing files from Azure Blob Storage...\")\n",
+    "    \n",
+    "    import_url = f\"{endpoint}/openai/files/import?api-version=2025-11-15-preview\"\n",
+    "    \n",
+    "    token = credential.get_token(\"https://ai.azure.com/.default\")\n",
+    "    \n",
+    "    headers = {\n",
+    "        \"Authorization\": f\"Bearer {token.token}\",\n",
+    "        \"Content-Type\": \"application/json\"\n",
+    "    }\n",
+    "    \n",
+    "    print(\"Importing training file...\")\n",
+    "    train_import_request = {\n",
+    "        \"filename\": \"training.jsonl\",\n",
+    "        \"purpose\": \"fine-tune\",\n",
+    "        \"content_url\": training_blob_url\n",
+    "    }\n",
+    "    \n",
+    "    with httpx.Client() as client:\n",
+    "        response = client.post(import_url, headers=headers, json=train_import_request)\n",
+    "        response.raise_for_status()\n",
+    "        train_file_data = response.json()\n",
+    "        train_file_id = train_file_data[\"id\"]\n",
+    "        print(f\"Training file imported: {train_file_id}\")\n",
+    "        \n",
+    "        if validation_blob_url:\n",
+    "            print(\"Importing validation file...\")\n",
+    "            val_import_request = {\n",
+    "                \"filename\": \"validation.jsonl\",\n",
+    "                \"purpose\": \"fine-tune\",\n",
+    "                \"content_url\": validation_blob_url\n",
+    "            }\n",
+    "            \n",
+    "            response = client.post(import_url, headers=headers, json=val_import_request)\n",
+    "            response.raise_for_status()\n",
+    "            val_file_data = response.json()\n",
+    "            val_file_id = val_file_data[\"id\"]\n",
+    "            print(f\"Validation file imported: {val_file_id}\")\n",
+    "    \n",
+    "    print(\"Import completed! Files are being processed...\")\n",
+    "else:\n",
+    "    print(\"Blob URLs not found in environment variables.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Wait for File Processing\n",
     "\n",
     "Azure AI needs to process the uploaded files before they can be used for fine-tuning."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -327,8 +422,8 @@
    ],
    "source": [
     "print(\"Waiting for files to be processed...\")\n",
-    "openai_client.files.wait_for_processing(train_file.id)\n",
-    "openai_client.files.wait_for_processing(validation_file.id)\n",
+    "openai_client.files.wait_for_processing(train_file_id)\n",
+    "openai_client.files.wait_for_processing(val_file_id)\n",
     "print(\"Files ready!\")"
    ]
   },
@@ -336,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7. Create Supervised Fine-Tuning Job\n",
+    "## 8. Create Supervised Fine-Tuning Job\n",
     "\n",
     "Create a supervised fine-tuning job with your uploaded datasets. Configure the following hyperparameters to control the training process:\n",
     "\n",
@@ -350,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -359,9 +454,9 @@
      "text": [
       "Creating supervised fine-tuning job...\n",
       "Fine-tuning job created!\n",
-      "Job ID: ftjob-bfed22df84ea478e8dc27c81a8f3b285\n",
+      "Job ID: ftjob-2f90d7f552f64daab92bf7e8f03e32ae\n",
       "Status: pending\n",
-      "Model: gpt-4.1-mini-2025-04-14\n"
+      "Model: gpt-4.1-2025-04-14\n"
      ]
     }
    ],
@@ -370,8 +465,8 @@
     "\n",
     "fine_tune_job = openai_client.fine_tuning.jobs.create(\n",
     "    model=model_name,\n",
-    "    training_file=train_file.id,\n",
-    "    validation_file=validation_file.id,\n",
+    "    training_file=train_file_id,\n",
+    "    validation_file=val_file_id,\n",
     "    method={\n",
     "        \"type\": \"supervised\",\n",
     "        \"supervised\": {\"hyperparameters\": {\"n_epochs\": 3, \"batch_size\": 1, \"learning_rate_multiplier\": 1.0}},\n",
@@ -389,14 +484,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8. Monitor Training Progress\n",
+    "## 9. Monitor Training Progress\n",
     "\n",
     "Track the status of your fine-tuning job. You can view the current status, and recent training events. Training duration varies based on dataset size, model, and hyperparameters - typically ranging from minutes to several hours."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -416,14 +511,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9. Retrieve Fine-Tuned Model\n",
+    "## 10. Retrieve Fine-Tuned Model\n",
     "\n",
     "After the fine-tuning job succeeded, retrieve the fine-tuned model ID. This ID is required to make inference calls with your customized model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +543,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 10. Deploy the Fine-Tuned Model\n",
+    "## 11. Deploy the Fine-Tuned Model\n",
     "\n",
     "Deploy the fine-tuned model to Azure OpenAI as a deployment endpoint. This step is required before making inference calls. The deployment uses GlobalStandard SKU with 50 capacity."
    ]
@@ -492,7 +587,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 11. Test Fine-Tuned Model\n",
+    "## 12. Test Fine-Tuned Model\n",
     "\n",
     "Test your fine-tuned model by generating a summary for a sample news article."
    ]
@@ -534,7 +629,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "envsft",
+   "display_name": "envsftcnn",
    "language": "python",
    "name": "python3"
   },
