resolving reiew comments

--- a/Demos/RFT_Math_Reasoning/rft_math_reasoning.ipynb
+++ b/Demos/RFT_Math_Reasoning/rft_math_reasoning.ipynb
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -202,12 +202,12 @@
    "source": [
     "## 3. Configure Azure Environment\n",
     "\n",
-    "Set your Azure AI Project endpoint, model name and other environment variables. We're using **o4-mini** in this example for RFT.\n",
+    "Set your Microsoft Foundry Project endpoint, model name and other environment variables. We're using **o4-mini** in this example for RFT.\n",
     "\n",
     "Create a .env file with:\n",
     "\n",
     "```\n",
-    "AZURE_AI_PROJECT_ENDPOINT=<your-endpoint>\n",
+    "MICROSOFT_FOUNDRY_PROJECT_ENDPOINT=<your-endpoint>\n",
     "AZURE_SUBSCRIPTION_ID=<your-subscription-id>\n",
     "AZURE_RESOURCE_GROUP=<your-resource-group>\n",
     "AZURE_AOAI_ACCOUNT=<your-foundry-account-name>\n",
@@ -217,13 +217,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "load_dotenv()\n",
     "\n",
-    "endpoint = os.environ.get(\"AZURE_AI_PROJECT_ENDPOINT\")\n",
+    "endpoint = os.environ.get(\"MICROSOFT_FOUNDRY_PROJECT_ENDPOINT\")\n",
     "model_name = os.environ.get(\"MODEL_NAME\", \"o4-mini\")\n",
     "\n",
     "# Define RFT dataset file paths\n",
@@ -235,23 +235,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Connect to Azure AI Project\n",
+    "## 4. Connect to Microsoft Foundry Project\n",
     "\n",
-    "Connect to Azure AI Project using Azure credential authentication. This initializes the project client and OpenAI client needed for fine-tuning workflows.\n",
+    "Connect to Microsoft Foundry Project using Azure credential authentication. This initializes the project client and OpenAI client needed for fine-tuning workflows.\n",
     "\n",
-    "**Important**: Ensure you have the **Azure AI User** role assigned to your account for the Azure AI Project resource."
+    "**Important**: Ensure you have the **Azure AI User** role assigned to your account for the Microsoft Foundry Project resource."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Connected to Azure AI Project\n"
+      "Connected to Microsoft Foundry Project\n"
      ]
     }
    ],
@@ -260,7 +260,7 @@
     "project_client = AIProjectClient(endpoint=endpoint, credential=credential)\n",
     "openai_client = project_client.get_openai_client()\n",
     "\n",
-    "print(\"Connected to Azure AI Project\")"
+    "print(\"Connected to Microsoft Foundry Project\")"
    ]
   },
   {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -489,12 +489,12 @@
    "source": [
     "## 6. Upload Training Files\n",
     "\n",
-    "Upload the training and validation JSONL files to Azure AI. Each file is assigned a unique ID that will be referenced when creating the fine-tuning job.\n"
+    "Upload the training and validation JSONL files to Microsoft Foundry. Each file is assigned a unique ID that will be referenced when creating the fine-tuning job.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -503,8 +503,8 @@
      "text": [
       "Uploading training file...\n",
       "Uploading validation file...\n",
-      "Training file ID: file-9b69d3575a1e4275bdcd7da46ea5ff19\n",
-      "Validation file ID: file-6e4b29f59eeb424eb70f9dfa42fec48d\n"
+      "Training file ID: file-ef920ef1469b4750971a7601ec5f9189\n",
+      "Validation file ID: file-2d11b1d6f7414ff996c9bc9c25382927\n"
      ]
     }
    ],
@@ -530,12 +530,12 @@
    "source": [
     "## 7. Wait for File Processing\n",
     "\n",
-    "Azure AI needs to process the uploaded files before they can be used for fine-tuning. This step ensures the files are validated and ready for the RFT job."
+    "Microsoft Foundry needs to process the uploaded files before they can be used for fine-tuning. This step ensures the files are validated and ready for the RFT job."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
      "text": [
       "Creating Reinforcement Fine-Tuning job...\n",
       "Fine-tuning job created!\n",
-      "Job ID: ftjob-0f1e6d94a03643bf91f167cbe940a032\n",
+      "Job ID: ftjob-927c273b843b483a9b4512204cd01c39\n",
       "Status: pending\n",
       "Model: o4-mini-2025-04-16\n"
      ]
@@ -601,6 +601,9 @@
     "            }\n",
     "        }\n",
     "    },\n",
+    "    extra_body={\n",
+    "        \"trainingType\": \"Standard\"\n",
+    "    },\n",
     "    suffix=\"math-reasoning-rft\"\n",
     ")\n",
     "\n",
@@ -621,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
