--- a/Demos/RFT_Math_Reasoning/rft_math_reasoning.ipynb
+++ b/Demos/RFT_Math_Reasoning/rft_math_reasoning.ipynb
@@ -40,7 +40,7 @@
       "Collecting azure-ai-projects>=2.0.0b1 (from -r requirements.txt (line 2))\n",
       "  Using cached azure_ai_projects-2.0.0b3-py3-none-any.whl.metadata (68 kB)\n",
       "Collecting openai (from -r requirements.txt (line 5))\n",
-      "  Using cached openai-2.14.0-py3-none-any.whl.metadata (29 kB)\n",
+      "  Downloading openai-2.15.0-py3-none-any.whl.metadata (29 kB)\n",
       "Collecting azure-identity (from -r requirements.txt (line 8))\n",
       "  Using cached azure_identity-1.25.1-py3-none-any.whl.metadata (88 kB)\n",
       "Collecting azure-mgmt-cognitiveservices (from -r requirements.txt (line 9))\n",
@@ -50,7 +50,9 @@
       "Collecting isodate>=0.6.1 (from azure-ai-projects>=2.0.0b1->-r requirements.txt (line 2))\n",
       "  Using cached isodate-0.7.2-py3-none-any.whl.metadata (11 kB)\n",
       "Collecting azure-core>=1.35.0 (from azure-ai-projects>=2.0.0b1->-r requirements.txt (line 2))\n",
-      "  Using cached azure_core-1.37.0-py3-none-any.whl.metadata (47 kB)\n",
+      "  Downloading azure_core-1.38.0-py3-none-any.whl.metadata (47 kB)\n",
+      "     ---------------------------------------- 0.0/47.7 kB ? eta -:--:--\n",
+      "     ---------------------------------------- 47.7/47.7 kB 1.2 MB/s eta 0:00:00\n",
       "Collecting azure-storage-blob>=12.15.0 (from azure-ai-projects>=2.0.0b1->-r requirements.txt (line 2))\n",
       "  Using cached azure_storage_blob-12.28.0-py3-none-any.whl.metadata (26 kB)\n",
       "Collecting anyio<5,>=3.5.0 (from openai->-r requirements.txt (line 5))\n",
@@ -106,16 +108,24 @@
       "Collecting charset_normalizer<4,>=2 (from requests>=2.21.0->azure-core>=1.35.0->azure-ai-projects>=2.0.0b1->-r requirements.txt (line 2))\n",
       "  Using cached charset_normalizer-3.4.4-cp311-cp311-win_amd64.whl.metadata (38 kB)\n",
       "Collecting urllib3<3,>=1.21.1 (from requests>=2.21.0->azure-core>=1.35.0->azure-ai-projects>=2.0.0b1->-r requirements.txt (line 2))\n",
-      "  Downloading urllib3-2.6.3-py3-none-any.whl.metadata (6.9 kB)\n",
+      "  Using cached urllib3-2.6.3-py3-none-any.whl.metadata (6.9 kB)\n",
       "Collecting oauthlib>=3.0.0 (from requests-oauthlib>=0.5.0->msrest>=0.7.1->azure-mgmt-cognitiveservices->-r requirements.txt (line 9))\n",
       "  Using cached oauthlib-3.3.1-py3-none-any.whl.metadata (7.9 kB)\n",
       "Using cached azure_ai_projects-2.0.0b3-py3-none-any.whl (240 kB)\n",
-      "Using cached openai-2.14.0-py3-none-any.whl (1.1 MB)\n",
+      "Downloading openai-2.15.0-py3-none-any.whl (1.1 MB)\n",
+      "   ---------------------------------------- 0.0/1.1 MB ? eta -:--:--\n",
+      "   --- ------------------------------------ 0.1/1.1 MB 5.1 MB/s eta 0:00:01\n",
+      "   --------- ------------------------------ 0.3/1.1 MB 3.2 MB/s eta 0:00:01\n",
+      "   --------------------- ------------------ 0.6/1.1 MB 4.4 MB/s eta 0:00:01\n",
+      "   ------------------------------------- -- 1.0/1.1 MB 5.8 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 1.1/1.1 MB 5.2 MB/s eta 0:00:00\n",
       "Using cached azure_identity-1.25.1-py3-none-any.whl (191 kB)\n",
       "Using cached azure_mgmt_cognitiveservices-14.1.0-py3-none-any.whl (290 kB)\n",
       "Using cached python_dotenv-1.2.1-py3-none-any.whl (21 kB)\n",
       "Using cached anyio-4.12.1-py3-none-any.whl (113 kB)\n",
-      "Using cached azure_core-1.37.0-py3-none-any.whl (214 kB)\n",
+      "Downloading azure_core-1.38.0-py3-none-any.whl (217 kB)\n",
+      "   ---------------------------------------- 0.0/217.8 kB ? eta -:--:--\n",
+      "   --------------------------------------- 217.8/217.8 kB 13.8 MB/s eta 0:00:00\n",
       "Using cached azure_mgmt_core-1.6.0-py3-none-any.whl (29 kB)\n",
       "Using cached azure_storage_blob-12.28.0-py3-none-any.whl (431 kB)\n",
       "Using cached cryptography-46.0.3-cp311-abi3-win_amd64.whl (3.5 MB)\n",
@@ -142,14 +152,10 @@
       "Using cached charset_normalizer-3.4.4-cp311-cp311-win_amd64.whl (106 kB)\n",
       "Using cached h11-0.16.0-py3-none-any.whl (37 kB)\n",
       "Using cached oauthlib-3.3.1-py3-none-any.whl (160 kB)\n",
-      "Downloading urllib3-2.6.3-py3-none-any.whl (131 kB)\n",
-      "   ---------------------------------------- 0.0/131.6 kB ? eta -:--:--\n",
-      "   --------- ------------------------------ 30.7/131.6 kB 1.4 MB/s eta 0:00:01\n",
-      "   ---------------------------- ----------- 92.2/131.6 kB 1.1 MB/s eta 0:00:01\n",
-      "   -------------------------------------- 131.6/131.6 kB 970.8 kB/s eta 0:00:00\n",
+      "Using cached urllib3-2.6.3-py3-none-any.whl (131 kB)\n",
       "Using cached pycparser-2.23-py3-none-any.whl (118 kB)\n",
       "Installing collected packages: urllib3, typing-inspection, tqdm, sniffio, python-dotenv, PyJWT, pydantic-core, pycparser, oauthlib, jiter, isodate, idna, h11, distro, charset_normalizer, certifi, annotated-types, requests, pydantic, httpcore, cffi, anyio, requests-oauthlib, httpx, cryptography, azure-core, openai, msrest, azure-storage-blob, azure-mgmt-core, msal, azure-mgmt-cognitiveservices, msal-extensions, azure-identity, azure-ai-projects\n",
-      "Successfully installed PyJWT-2.10.1 annotated-types-0.7.0 anyio-4.12.1 azure-ai-projects-2.0.0b3 azure-core-1.37.0 azure-identity-1.25.1 azure-mgmt-cognitiveservices-14.1.0 azure-mgmt-core-1.6.0 azure-storage-blob-12.28.0 certifi-2026.1.4 cffi-2.0.0 charset_normalizer-3.4.4 cryptography-46.0.3 distro-1.9.0 h11-0.16.0 httpcore-1.0.9 httpx-0.28.1 idna-3.11 isodate-0.7.2 jiter-0.12.0 msal-1.34.0 msal-extensions-1.3.1 msrest-0.7.1 oauthlib-3.3.1 openai-2.14.0 pycparser-2.23 pydantic-2.12.5 pydantic-core-2.41.5 python-dotenv-1.2.1 requests-2.32.5 requests-oauthlib-2.0.0 sniffio-1.3.1 tqdm-4.67.1 typing-inspection-0.4.2 urllib3-2.6.3\n",
+      "Successfully installed PyJWT-2.10.1 annotated-types-0.7.0 anyio-4.12.1 azure-ai-projects-2.0.0b3 azure-core-1.38.0 azure-identity-1.25.1 azure-mgmt-cognitiveservices-14.1.0 azure-mgmt-core-1.6.0 azure-storage-blob-12.28.0 certifi-2026.1.4 cffi-2.0.0 charset_normalizer-3.4.4 cryptography-46.0.3 distro-1.9.0 h11-0.16.0 httpcore-1.0.9 httpx-0.28.1 idna-3.11 isodate-0.7.2 jiter-0.12.0 msal-1.34.0 msal-extensions-1.3.1 msrest-0.7.1 oauthlib-3.3.1 openai-2.15.0 pycparser-2.23 pydantic-2.12.5 pydantic-core-2.41.5 python-dotenv-1.2.1 requests-2.32.5 requests-oauthlib-2.0.0 sniffio-1.3.1 tqdm-4.67.1 typing-inspection-0.4.2 urllib3-2.6.3\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
@@ -176,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -202,9 +208,7 @@
    "source": [
     "## 3. Configure Azure Environment\n",
     "\n",
-    "Set your Microsoft Foundry Project endpoint, model name and other environment variables. We're using **o4-mini** in this example for RFT.\n",
-    "\n",
-    "Create a .env file with:\n",
+    "Set your Microsoft Foundry Project endpoint, model name and other environment variables. We're using **o4-mini** in this example for RFT. Copy the file `.env.template` (located in this folder), and save it as file named `.env`. Enter appropriate values for the environment variables used for the job you want to run.\n",
     "\n",
     "```\n",
     "MICROSOFT_FOUNDRY_PROJECT_ENDPOINT=<your-endpoint>\n",
@@ -217,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -503,8 +507,8 @@
      "text": [
       "Uploading training file...\n",
       "Uploading validation file...\n",
-      "Training file ID: file-ef920ef1469b4750971a7601ec5f9189\n",
-      "Validation file ID: file-2d11b1d6f7414ff996c9bc9c25382927\n"
+      "Training file ID: file-2025c178eb324ee7afa324d4c4c41785\n",
+      "Validation file ID: file-32e0620690084456860349c09c01140c\n"
      ]
     }
    ],
@@ -535,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +578,7 @@
      "text": [
       "Creating Reinforcement Fine-Tuning job...\n",
       "Fine-tuning job created!\n",
-      "Job ID: ftjob-927c273b843b483a9b4512204cd01c39\n",
+      "Job ID: ftjob-921f079fed5649b68e5e9ee53454233a\n",
       "Status: pending\n",
       "Model: o4-mini-2025-04-16\n"
      ]
@@ -602,7 +606,7 @@
     "        }\n",
     "    },\n",
     "    extra_body={\n",
-    "        \"trainingType\": \"Standard\"\n",
+    "        \"trainingType\": \"GlobalStandard\"\n",
     "    },\n",
     "    suffix=\"math-reasoning-rft\"\n",
     ")\n",
