sbumitting new job

--- a/Demos/RFT_Math_Reasoning/rft_math_reasoning.ipynb
+++ b/Demos/RFT_Math_Reasoning/rft_math_reasoning.ipynb
@@ -40,7 +40,7 @@
       "Collecting azure-ai-projects>=2.0.0b1 (from -r requirements.txt (line 2))\n",
       "  Using cached azure_ai_projects-2.0.0b3-py3-none-any.whl.metadata (68 kB)\n",
       "Collecting openai (from -r requirements.txt (line 5))\n",
-      "  Downloading openai-2.15.0-py3-none-any.whl.metadata (29 kB)\n",
+      "  Using cached openai-2.15.0-py3-none-any.whl.metadata (29 kB)\n",
       "Collecting azure-identity (from -r requirements.txt (line 8))\n",
       "  Using cached azure_identity-1.25.1-py3-none-any.whl.metadata (88 kB)\n",
       "Collecting azure-mgmt-cognitiveservices (from -r requirements.txt (line 9))\n",
@@ -50,9 +50,7 @@
       "Collecting isodate>=0.6.1 (from azure-ai-projects>=2.0.0b1->-r requirements.txt (line 2))\n",
       "  Using cached isodate-0.7.2-py3-none-any.whl.metadata (11 kB)\n",
       "Collecting azure-core>=1.35.0 (from azure-ai-projects>=2.0.0b1->-r requirements.txt (line 2))\n",
-      "  Downloading azure_core-1.38.0-py3-none-any.whl.metadata (47 kB)\n",
-      "     ---------------------------------------- 0.0/47.7 kB ? eta -:--:--\n",
-      "     ---------------------------------------- 47.7/47.7 kB 1.2 MB/s eta 0:00:00\n",
+      "  Using cached azure_core-1.38.0-py3-none-any.whl.metadata (47 kB)\n",
       "Collecting azure-storage-blob>=12.15.0 (from azure-ai-projects>=2.0.0b1->-r requirements.txt (line 2))\n",
       "  Using cached azure_storage_blob-12.28.0-py3-none-any.whl.metadata (26 kB)\n",
       "Collecting anyio<5,>=3.5.0 (from openai->-r requirements.txt (line 5))\n",
@@ -69,7 +67,7 @@
       "  Using cached sniffio-1.3.1-py3-none-any.whl.metadata (3.9 kB)\n",
       "Collecting tqdm>4 (from openai->-r requirements.txt (line 5))\n",
       "  Using cached tqdm-4.67.1-py3-none-any.whl.metadata (57 kB)\n",
-      "Requirement already satisfied: typing-extensions<5,>=4.11 in c:\\work\\amlrepos\\rftcookbook\\fine-tuning\\env\\lib\\site-packages (from openai->-r requirements.txt (line 5)) (4.15.0)\n",
+      "Requirement already satisfied: typing-extensions<5,>=4.11 in c:\\work\\amlrepos\\fine-tuning\\envrft\\lib\\site-packages (from openai->-r requirements.txt (line 5)) (4.15.0)\n",
       "Collecting cryptography>=2.5 (from azure-identity->-r requirements.txt (line 8))\n",
       "  Using cached cryptography-46.0.3-cp311-abi3-win_amd64.whl.metadata (5.7 kB)\n",
       "Collecting msal>=1.30.0 (from azure-identity->-r requirements.txt (line 8))\n",
@@ -102,7 +100,7 @@
       "  Using cached pydantic_core-2.41.5-cp311-cp311-win_amd64.whl.metadata (7.4 kB)\n",
       "Collecting typing-inspection>=0.4.2 (from pydantic<3,>=1.9.0->openai->-r requirements.txt (line 5))\n",
       "  Using cached typing_inspection-0.4.2-py3-none-any.whl.metadata (2.6 kB)\n",
-      "Requirement already satisfied: colorama in c:\\work\\amlrepos\\rftcookbook\\fine-tuning\\env\\lib\\site-packages (from tqdm>4->openai->-r requirements.txt (line 5)) (0.4.6)\n",
+      "Requirement already satisfied: colorama in c:\\work\\amlrepos\\fine-tuning\\envrft\\lib\\site-packages (from tqdm>4->openai->-r requirements.txt (line 5)) (0.4.6)\n",
       "Collecting pycparser (from cffi>=2.0.0->cryptography>=2.5->azure-identity->-r requirements.txt (line 8))\n",
       "  Using cached pycparser-2.23-py3-none-any.whl.metadata (993 bytes)\n",
       "Collecting charset_normalizer<4,>=2 (from requests>=2.21.0->azure-core>=1.35.0->azure-ai-projects>=2.0.0b1->-r requirements.txt (line 2))\n",
@@ -112,20 +110,12 @@
       "Collecting oauthlib>=3.0.0 (from requests-oauthlib>=0.5.0->msrest>=0.7.1->azure-mgmt-cognitiveservices->-r requirements.txt (line 9))\n",
       "  Using cached oauthlib-3.3.1-py3-none-any.whl.metadata (7.9 kB)\n",
       "Using cached azure_ai_projects-2.0.0b3-py3-none-any.whl (240 kB)\n",
-      "Downloading openai-2.15.0-py3-none-any.whl (1.1 MB)\n",
-      "   ---------------------------------------- 0.0/1.1 MB ? eta -:--:--\n",
-      "   --- ------------------------------------ 0.1/1.1 MB 5.1 MB/s eta 0:00:01\n",
-      "   --------- ------------------------------ 0.3/1.1 MB 3.2 MB/s eta 0:00:01\n",
-      "   --------------------- ------------------ 0.6/1.1 MB 4.4 MB/s eta 0:00:01\n",
-      "   ------------------------------------- -- 1.0/1.1 MB 5.8 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 1.1/1.1 MB 5.2 MB/s eta 0:00:00\n",
+      "Using cached openai-2.15.0-py3-none-any.whl (1.1 MB)\n",
       "Using cached azure_identity-1.25.1-py3-none-any.whl (191 kB)\n",
       "Using cached azure_mgmt_cognitiveservices-14.1.0-py3-none-any.whl (290 kB)\n",
       "Using cached python_dotenv-1.2.1-py3-none-any.whl (21 kB)\n",
       "Using cached anyio-4.12.1-py3-none-any.whl (113 kB)\n",
-      "Downloading azure_core-1.38.0-py3-none-any.whl (217 kB)\n",
-      "   ---------------------------------------- 0.0/217.8 kB ? eta -:--:--\n",
-      "   --------------------------------------- 217.8/217.8 kB 13.8 MB/s eta 0:00:00\n",
+      "Using cached azure_core-1.38.0-py3-none-any.whl (217 kB)\n",
       "Using cached azure_mgmt_core-1.6.0-py3-none-any.whl (29 kB)\n",
       "Using cached azure_storage_blob-12.28.0-py3-none-any.whl (431 kB)\n",
       "Using cached cryptography-46.0.3-cp311-abi3-win_amd64.whl (3.5 MB)\n",
@@ -507,8 +497,8 @@
      "text": [
       "Uploading training file...\n",
       "Uploading validation file...\n",
-      "Training file ID: file-2025c178eb324ee7afa324d4c4c41785\n",
-      "Validation file ID: file-32e0620690084456860349c09c01140c\n"
+      "Training file ID: file-f0022bb49b1f4381a30491109dc9b46e\n",
+      "Validation file ID: file-a96397f30c8d4effb5609cca94f78655\n"
      ]
     }
    ],
@@ -578,7 +568,7 @@
      "text": [
       "Creating Reinforcement Fine-Tuning job...\n",
       "Fine-tuning job created!\n",
-      "Job ID: ftjob-921f079fed5649b68e5e9ee53454233a\n",
+      "Job ID: ftjob-9fd84ed126a048dc9e22976ee2cc8346\n",
       "Status: pending\n",
       "Model: o4-mini-2025-04-16\n"
      ]
@@ -754,7 +744,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "envrft",
    "language": "python",
    "name": "python3"
   },
