--- a/Demos/SFT_PubMed_Summarization/sft_pubmed_summarization.ipynb
+++ b/Demos/SFT_PubMed_Summarization/sft_pubmed_summarization.ipynb
@@ -37,9 +37,9 @@
      "output_type": "stream",
      "text": [
       "Collecting azure-ai-projects>=2.0.0b1 (from -r requirements.txt (line 2))\n",
-      "  Using cached azure_ai_projects-2.0.0b2-py3-none-any.whl.metadata (63 kB)\n",
+      "  Using cached azure_ai_projects-2.0.0b3-py3-none-any.whl.metadata (68 kB)\n",
       "Collecting openai (from -r requirements.txt (line 5))\n",
-      "  Using cached openai-2.14.0-py3-none-any.whl.metadata (29 kB)\n",
+      "  Using cached openai-2.15.0-py3-none-any.whl.metadata (29 kB)\n",
       "Collecting azure-identity (from -r requirements.txt (line 8))\n",
       "  Using cached azure_identity-1.25.1-py3-none-any.whl.metadata (88 kB)\n",
       "Collecting azure-mgmt-cognitiveservices (from -r requirements.txt (line 9))\n",
@@ -49,12 +49,11 @@
       "Collecting isodate>=0.6.1 (from azure-ai-projects>=2.0.0b1->-r requirements.txt (line 2))\n",
       "  Using cached isodate-0.7.2-py3-none-any.whl.metadata (11 kB)\n",
       "Collecting azure-core>=1.35.0 (from azure-ai-projects>=2.0.0b1->-r requirements.txt (line 2))\n",
-      "  Using cached azure_core-1.37.0-py3-none-any.whl.metadata (47 kB)\n",
-      "Requirement already satisfied: typing-extensions>=4.6.0 in c:\\work\\amlrepos\\fine-tuning\\envmed\\lib\\site-packages (from azure-ai-projects>=2.0.0b1->-r requirements.txt (line 2)) (4.15.0)\n",
+      "  Using cached azure_core-1.38.0-py3-none-any.whl.metadata (47 kB)\n",
       "Collecting azure-storage-blob>=12.15.0 (from azure-ai-projects>=2.0.0b1->-r requirements.txt (line 2))\n",
-      "  Using cached azure_storage_blob-12.27.1-py3-none-any.whl.metadata (26 kB)\n",
+      "  Using cached azure_storage_blob-12.28.0-py3-none-any.whl.metadata (26 kB)\n",
       "Collecting anyio<5,>=3.5.0 (from openai->-r requirements.txt (line 5))\n",
-      "  Using cached anyio-4.12.0-py3-none-any.whl.metadata (4.3 kB)\n",
+      "  Using cached anyio-4.12.1-py3-none-any.whl.metadata (4.3 kB)\n",
       "Collecting distro<2,>=1.7.0 (from openai->-r requirements.txt (line 5))\n",
       "  Using cached distro-1.9.0-py3-none-any.whl.metadata (6.8 kB)\n",
       "Collecting httpx<1,>=0.23.0 (from openai->-r requirements.txt (line 5))\n",
@@ -67,6 +66,7 @@
       "  Using cached sniffio-1.3.1-py3-none-any.whl.metadata (3.9 kB)\n",
       "Collecting tqdm>4 (from openai->-r requirements.txt (line 5))\n",
       "  Using cached tqdm-4.67.1-py3-none-any.whl.metadata (57 kB)\n",
+      "Requirement already satisfied: typing-extensions<5,>=4.11 in c:\\work\\amlrepos\\fine-tuning\\env\\lib\\site-packages (from openai->-r requirements.txt (line 5)) (4.15.0)\n",
       "Collecting cryptography>=2.5 (from azure-identity->-r requirements.txt (line 8))\n",
       "  Using cached cryptography-46.0.3-cp311-abi3-win_amd64.whl.metadata (5.7 kB)\n",
       "Collecting msal>=1.30.0 (from azure-identity->-r requirements.txt (line 8))\n",
@@ -84,7 +84,7 @@
       "Collecting cffi>=2.0.0 (from cryptography>=2.5->azure-identity->-r requirements.txt (line 8))\n",
       "  Using cached cffi-2.0.0-cp311-cp311-win_amd64.whl.metadata (2.6 kB)\n",
       "Collecting certifi (from httpx<1,>=0.23.0->openai->-r requirements.txt (line 5))\n",
-      "  Using cached certifi-2025.11.12-py3-none-any.whl.metadata (2.5 kB)\n",
+      "  Using cached certifi-2026.1.4-py3-none-any.whl.metadata (2.5 kB)\n",
       "Collecting httpcore==1.* (from httpx<1,>=0.23.0->openai->-r requirements.txt (line 5))\n",
       "  Using cached httpcore-1.0.9-py3-none-any.whl.metadata (21 kB)\n",
       "Collecting h11>=0.16 (from httpcore==1.*->httpx<1,>=0.23.0->openai->-r requirements.txt (line 5))\n",
@@ -99,24 +99,24 @@
       "  Using cached pydantic_core-2.41.5-cp311-cp311-win_amd64.whl.metadata (7.4 kB)\n",
       "Collecting typing-inspection>=0.4.2 (from pydantic<3,>=1.9.0->openai->-r requirements.txt (line 5))\n",
       "  Using cached typing_inspection-0.4.2-py3-none-any.whl.metadata (2.6 kB)\n",
-      "Requirement already satisfied: colorama in c:\\work\\amlrepos\\fine-tuning\\envmed\\lib\\site-packages (from tqdm>4->openai->-r requirements.txt (line 5)) (0.4.6)\n",
+      "Requirement already satisfied: colorama in c:\\work\\amlrepos\\fine-tuning\\env\\lib\\site-packages (from tqdm>4->openai->-r requirements.txt (line 5)) (0.4.6)\n",
       "Collecting pycparser (from cffi>=2.0.0->cryptography>=2.5->azure-identity->-r requirements.txt (line 8))\n",
       "  Using cached pycparser-2.23-py3-none-any.whl.metadata (993 bytes)\n",
       "Collecting charset_normalizer<4,>=2 (from requests>=2.21.0->azure-core>=1.35.0->azure-ai-projects>=2.0.0b1->-r requirements.txt (line 2))\n",
       "  Using cached charset_normalizer-3.4.4-cp311-cp311-win_amd64.whl.metadata (38 kB)\n",
       "Collecting urllib3<3,>=1.21.1 (from requests>=2.21.0->azure-core>=1.35.0->azure-ai-projects>=2.0.0b1->-r requirements.txt (line 2))\n",
-      "  Using cached urllib3-2.6.2-py3-none-any.whl.metadata (6.6 kB)\n",
+      "  Using cached urllib3-2.6.3-py3-none-any.whl.metadata (6.9 kB)\n",
       "Collecting oauthlib>=3.0.0 (from requests-oauthlib>=0.5.0->msrest>=0.7.1->azure-mgmt-cognitiveservices->-r requirements.txt (line 9))\n",
       "  Using cached oauthlib-3.3.1-py3-none-any.whl.metadata (7.9 kB)\n",
-      "Using cached azure_ai_projects-2.0.0b2-py3-none-any.whl (234 kB)\n",
-      "Using cached openai-2.14.0-py3-none-any.whl (1.1 MB)\n",
+      "Using cached azure_ai_projects-2.0.0b3-py3-none-any.whl (240 kB)\n",
+      "Using cached openai-2.15.0-py3-none-any.whl (1.1 MB)\n",
       "Using cached azure_identity-1.25.1-py3-none-any.whl (191 kB)\n",
       "Using cached azure_mgmt_cognitiveservices-14.1.0-py3-none-any.whl (290 kB)\n",
       "Using cached python_dotenv-1.2.1-py3-none-any.whl (21 kB)\n",
-      "Using cached anyio-4.12.0-py3-none-any.whl (113 kB)\n",
-      "Using cached azure_core-1.37.0-py3-none-any.whl (214 kB)\n",
+      "Using cached anyio-4.12.1-py3-none-any.whl (113 kB)\n",
+      "Using cached azure_core-1.38.0-py3-none-any.whl (217 kB)\n",
       "Using cached azure_mgmt_core-1.6.0-py3-none-any.whl (29 kB)\n",
-      "Using cached azure_storage_blob-12.27.1-py3-none-any.whl (428 kB)\n",
+      "Using cached azure_storage_blob-12.28.0-py3-none-any.whl (431 kB)\n",
       "Using cached cryptography-46.0.3-cp311-abi3-win_amd64.whl (3.5 MB)\n",
       "Using cached distro-1.9.0-py3-none-any.whl (20 kB)\n",
       "Using cached httpx-0.28.1-py3-none-any.whl (73 kB)\n",
@@ -131,7 +131,7 @@
       "Using cached tqdm-4.67.1-py3-none-any.whl (78 kB)\n",
       "Using cached sniffio-1.3.1-py3-none-any.whl (10 kB)\n",
       "Using cached annotated_types-0.7.0-py3-none-any.whl (13 kB)\n",
-      "Using cached certifi-2025.11.12-py3-none-any.whl (159 kB)\n",
+      "Using cached certifi-2026.1.4-py3-none-any.whl (152 kB)\n",
       "Using cached cffi-2.0.0-cp311-cp311-win_amd64.whl (182 kB)\n",
       "Using cached idna-3.11-py3-none-any.whl (71 kB)\n",
       "Using cached PyJWT-2.10.1-py3-none-any.whl (22 kB)\n",
@@ -141,10 +141,10 @@
       "Using cached charset_normalizer-3.4.4-cp311-cp311-win_amd64.whl (106 kB)\n",
       "Using cached h11-0.16.0-py3-none-any.whl (37 kB)\n",
       "Using cached oauthlib-3.3.1-py3-none-any.whl (160 kB)\n",
-      "Using cached urllib3-2.6.2-py3-none-any.whl (131 kB)\n",
+      "Using cached urllib3-2.6.3-py3-none-any.whl (131 kB)\n",
       "Using cached pycparser-2.23-py3-none-any.whl (118 kB)\n",
-      "Installing collected packages: urllib3, typing-inspection, tqdm, sniffio, python-dotenv, PyJWT, pydantic-core, pycparser, oauthlib, jiter, isodate, idna, h11, distro, charset_normalizer, certifi, annotated-types, requests, pydantic, httpcore, cffi, anyio, requests-oauthlib, httpx, cryptography, azure-core, openai, msrest, azure-storage-blob, azure-mgmt-core, msal, azure-mgmt-cognitiveservices, azure-ai-projects, msal-extensions, azure-identity\n",
-      "Successfully installed PyJWT-2.10.1 annotated-types-0.7.0 anyio-4.12.0 azure-ai-projects-2.0.0b2 azure-core-1.37.0 azure-identity-1.25.1 azure-mgmt-cognitiveservices-14.1.0 azure-mgmt-core-1.6.0 azure-storage-blob-12.27.1 certifi-2025.11.12 cffi-2.0.0 charset_normalizer-3.4.4 cryptography-46.0.3 distro-1.9.0 h11-0.16.0 httpcore-1.0.9 httpx-0.28.1 idna-3.11 isodate-0.7.2 jiter-0.12.0 msal-1.34.0 msal-extensions-1.3.1 msrest-0.7.1 oauthlib-3.3.1 openai-2.14.0 pycparser-2.23 pydantic-2.12.5 pydantic-core-2.41.5 python-dotenv-1.2.1 requests-2.32.5 requests-oauthlib-2.0.0 sniffio-1.3.1 tqdm-4.67.1 typing-inspection-0.4.2 urllib3-2.6.2\n",
+      "Installing collected packages: urllib3, typing-inspection, tqdm, sniffio, python-dotenv, PyJWT, pydantic-core, pycparser, oauthlib, jiter, isodate, idna, h11, distro, charset_normalizer, certifi, annotated-types, requests, pydantic, httpcore, cffi, anyio, requests-oauthlib, httpx, cryptography, azure-core, openai, msrest, azure-storage-blob, azure-mgmt-core, msal, azure-mgmt-cognitiveservices, msal-extensions, azure-identity, azure-ai-projects\n",
+      "Successfully installed PyJWT-2.10.1 annotated-types-0.7.0 anyio-4.12.1 azure-ai-projects-2.0.0b3 azure-core-1.38.0 azure-identity-1.25.1 azure-mgmt-cognitiveservices-14.1.0 azure-mgmt-core-1.6.0 azure-storage-blob-12.28.0 certifi-2026.1.4 cffi-2.0.0 charset_normalizer-3.4.4 cryptography-46.0.3 distro-1.9.0 h11-0.16.0 httpcore-1.0.9 httpx-0.28.1 idna-3.11 isodate-0.7.2 jiter-0.12.0 msal-1.34.0 msal-extensions-1.3.1 msrest-0.7.1 oauthlib-3.3.1 openai-2.15.0 pycparser-2.23 pydantic-2.12.5 pydantic-core-2.41.5 python-dotenv-1.2.1 requests-2.32.5 requests-oauthlib-2.0.0 sniffio-1.3.1 tqdm-4.67.1 typing-inspection-0.4.2 urllib3-2.6.3\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -275,10 +275,10 @@
      "output_type": "stream",
      "text": [
       "Uploading training file...\n",
-      "Training file ID: file-05083606477b49b696a6500f066cd028\n",
+      "Training file ID: file-3039c4ac7c324ea88f9743ad1a4caf19\n",
       "\n",
       "Uploading validation file...\n",
-      "Validation file ID: file-7aa581fd19ec4c959322612351f44638\n"
+      "Validation file ID: file-24238eb91fea4e188217cc410a21502a\n"
      ]
     }
    ],
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
      "text": [
       "Creating supervised fine-tuning job...\n",
       "Fine-tuning job created!\n",
-      "Job ID: ftjob-ccae5a26756f4dcb833f221c88e633c8\n",
+      "Job ID: ftjob-0642f7186ee44b3083c35810814c1d4e\n",
       "Status: pending\n",
       "Model: gpt-4.1-2025-04-14\n"
      ]
@@ -520,7 +520,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "envrft",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
